# faat

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: composition-ci.yml
faat/: library.py
faat/builds/score/: score.ly
faat/segments/a/: __metadata__.json  music.ily  music.ly  music.py
faat/segments/b/: __metadata__.json  music.ily  music.ly  music.py
faat/stylesheets/: stylesheet.ily
